# elvi

./: .gitattributes  Cargo.toml  README.md  justfile  notes  test.elv
src/: internal.rs  main.rs  parse.rs  user_flags.rs
src/internal/: commands.rs  env.rs  errors.rs  status.rs  tree.rs  variables.rs
src/internal/builtins/: cd.rs  dbg.rs  echo.rs  exit.rs  hash.rs  shift.rs  test.rs  unset.rs
src/internal/builtins/cd/: cd.rs
src/internal/builtins/dbg/: dbg.rs
src/internal/builtins/echo/: echo.rs
src/internal/builtins/exit/: exit.rs
src/internal/builtins/hash/: hash.rs
src/internal/builtins/shift/: shift.rs
src/internal/builtins/test/: execute.rs  test.rs
src/internal/builtins/unset/: unset.rs
src/parse/: grammar.rs
src/parse/internals/: base.pest  builtins.pest  command_substitution.pest  commands.pest  for.pest  functions.pest  if.pest  strings.pest  variables.pest
test-sh/: dir_arg.sh  test.sh  test2.sh
