[package]
name = "elvi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backslash = "0.2.0"
clap = { version = "4.5.4", features = ["derive"] }
getopts = "0.2.21"
glob = "0.3.1"
homedir = "0.2.1"
libc = "0.2.155"
pest = "2.7.10"
pest_consume = { git = "https://github.com/Nadrieril/pest_consume.git" }
pest_derive = { version = "2.7.10", features = ["grammar-extras"] }

[profile.release]
lto = true
